# vt-ws22-23

./: .gitignore  Cargo.toml  README.md
scripts/: plots.ipynb
src/: main.rs
src/vm/: interpreter.rs  mod.rs  opcode.rs  program.rs  utils.rs
src/vm/interpreter/: jitted.rs  simple.rs
src/vm/opcode/: mod.rs
src/vm/program/: mod.rs
tests/: scenarios.rs
