[package]
name = "vt-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1.6"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm13-0"] }
serde = {version = "1.0", features = ["derive"] }

[build-dependencies]
cc = { version = "1.0", features = ["parallel"] }
